--- a/templates/post.html
+++ b/templates/post.html
@@ -95,7 +95,7 @@
                     <div class="col-12 col-md-3 col-xl-3 order-1 order-md-2 mb-2">
                         <div class="container-fluid px-0 h-100">
                             <div class="row sticky-top">
-                                <div class="col-12 col-sm-6 col-md-12 order-2 order-md-1">
+                                <div class="col-12 col-sm-6 col-md-12 order-2 order-md-1 d-none d-sm-block">
                                     <div class="text-center postimagewrapper p-2 my-2">
                                         <!-- Post Image -->
                                     </div>
