--- a/templates/blog.html
+++ b/templates/blog.html
@@ -11,7 +11,7 @@
             <div class="row">            
               <div class="col-12 col-md-8 col-xl-9 d-flex flex-wrap mb-2 button-group filters-button-group" id="categories">
                 <button onclick="sort()" data-filter="*" type="button" 
-                class="btn bg-blue c-white me-2 mb-3">All</button>
+                class="btn bg-blue c-white me-2 mb-3 langkey" id="cat-Alle">Alle</button>
                 <!-- CATEGORIES -->
               </div>
               
