--- a/templates/post.html
+++ b/templates/post.html
@@ -146,7 +146,7 @@
     <script>
         var remark_config = {
             host: 'https://remark.niklas-stephan.de',
-            site_id: 'qas.niklas-stephan.de',
+            site_id: 'niklas-stephan.de',
             theme: 'dark',
             locale: lang,
         }
