--- a/templates/404.html
+++ b/templates/404.html
@@ -1,10 +1,6 @@
 <!-- html head from head.html snipppet -->
-
 <body>
-
     <!-- Top Navigation from navbar.html snipppet -->
-
-
     <!-- Main Content-->
     <main>
         <!-- Section Content-->
@@ -13,47 +9,40 @@
                 <div class="row ">
                     <div class="col-12 mt-5">
                         <h1 class="c-white langkey display-1" id="404">404</h1>
-                        <p class="langkey" id="404_content">Ups, da hat etwas nicht geklappt, die gewünschte Seite ist entweder nicht vefügbar oder noch ncicht in Deine Sprache übersetzt worden.</p>
+                        <p class="langkey fs-4" id="404_content">Ups, da hat etwas nicht geklappt, die gewünschte Seite
+                            ist entweder nicht vefügbar oder noch ncicht in Deine Sprache übersetzt worden.</p>
+                        <p class="langkey fs-5 pt-3" id="404_didyou">Meintest du vielleicht:</p>
                     </div>
+                </div>
+                <div class="row text-start">
+                    <div class="col-12">
+                        <ul id="searchrresults" class="list-group">
+                        </ul>
+                    </div>
+                    <div class="col-12"></div>
                 </div>
                 <div class="row text-start">
                     <div class="col-12 col-md-2"></div>
                     <div class="col-12 col-md-8 py-5 text-center">
-                        <div class="input-group input-group-lg mb-3">
-                            <input id="searchInput" type="text" class="form-control" placeholder="" aria-label="Search Term" aria-describedby="button-search">
-                            <button onclick="search()" class="btn btn-outline-primary" type="button" id="button-search">Start!</button>
-                          </div>
+                        <button onclick="goto('search')" class="btn btn-outline-primary langkey" type="button"
+                            id="404_searchlink">Zur Suche</button>
+                        <div class="d-none input-group input-group-lg mb-3">
+                            <input id="searchInput" type="text" class="form-control" placeholder=""
+                                aria-label="Search Term" aria-describedby="button-search">
+                            <button onclick="search()" class="btn btn-outline-primary" type="button"
+                                id="button-search">Start!</button>
+                        </div>
                     </div>
                     <div class="col-12 col-md-2"></div>
-                   
-                </div>
-
-
-                <div class="row text-start">
-                 
-                    <div class="col-12">
-                        <ul id="searchrresults" class="list-group">
-                          
-                           
-                          </ul>
-                    </div>
-                    <div class="col-12"></div>
                 </div>
             </div>
         </section>
-
         <!-- footer navigation from footer.html snipppet -->
- 
     </main>
-
-
     <!-- Javascript from script.html snipppet -->
-
     <script>
         searchKeyLogger();
         errorpage();
     </script>
-
 </body>
-
 </html>
