--- a/templates/search.html
+++ b/templates/search.html
@@ -1,14 +1,11 @@
 <!-- html head from head.html snipppet -->
-
 <body>
-
     <!-- Top Navigation from navbar.html snipppet -->
-
     <!-- Main Content-->
     <main>
         <!-- Section Content-->
         <section id="content">
-            <div class="container-lg" >
+            <div class="container-lg">
                 <div class="row pt-4 ">
                     <div class="col-12 mt-5 text-center">
                         <h1 class="c-white langkey" id="search_headline">
@@ -20,39 +17,28 @@
                     <div class="col-12 col-md-2"></div>
                     <div class="col-12 col-md-8 py-5 text-center">
                         <div class="input-group input-group-lg mb-3">
-                            <input id="searchInput" type="text" class="form-control" placeholder="" aria-label="Search Term" aria-describedby="button-search">
-                            <button onclick="search()" class="btn btn-outline-primary" type="button" id="button-search">Start!</button>
-                          </div>
+                            <input id="searchInput" type="text" class="form-control" placeholder=""
+                                aria-label="Search Term" aria-describedby="button-search">
+                            <button onclick="search()" class="btn btn-outline-primary" type="button"
+                                id="button-search">Start!</button>
+                        </div>
                     </div>
                     <div class="col-12 col-md-2"></div>
-                   
                 </div>
-
-
                 <div class="row pb-5">
-                  
                     <div class="col-12 ">
                         <ul id="searchrresults" class="list-group">
-                          
-                           
-                          </ul>
+                        </ul>
                     </div>
-            
                 </div>
             </div>
             </div>
         </section>
-
         <!-- footer navigation from footer.html snipppet -->
-
     </main>
-
-
     <!-- Javascript from script.html snipppet -->
-   
-<script>
-searchKeyLogger();
-</script>
+    <script>
+        searchKeyLogger();
+    </script>
 </body>
-
 </html>
